tests/NormalTests/paczka1/fuzzy1/83688094.err
Error in line 3: L2J6 A215 76,2
Error in line 13: FHMsWJN9hLj A215 30,8
Error in line 17: 3RLGP4Onwv S78 91,3
Error in line 26: tz1G0 A215 97,86
Error in line 23: S78 S314 55,5
